crates/cribo/tests/snapshots/bundled_code@metaclass_ordering_collision.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/metaclass_ordering_collision/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(_cribo_self, m, p):
        _cribo_self._m, _cribo_self._p = m, p

    def __getattr__(_cribo_self, n):
        f = _cribo_self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(_cribo_self._m, n)

    def __getattribute__(_cribo_self, n):
        return object.__getattribute__(_cribo_self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(_cribo_self, '_m'), n)
class _Cribo():

    def __getattr__(_cribo_self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:
    _pristine = {}

    def __init__(self, entry, namespace=None, reload_target=None):
        self._entry = entry
        self._namespace = namespace
        self._reload_target = reload_target

    def create_module(self, spec):
        module = None
        if self._namespace is not None:
            module = self._namespace
        elif self._entry[1] is not None:
            module = globals()[self._entry[1]]
        if module is not None:
            if getattr(module, '_cribo_machinery_loaded', False):
                saved = type(self)._pristine.get(id(module))
                fresh = _cribo.types.SimpleNamespace()
                fresh.__dict__.update(saved if saved is not None else {'__name__': spec.name})
                return fresh
            return module
        module = _cribo.types.SimpleNamespace(__name__=spec.name)
        for export, binding in self._entry[3].items():
            setattr(module, export, globals()[binding])
        return module

    def exec_module(self, module):
        init = self._entry[0]
        if init is None:
            return
        pristine = type(self)._pristine
        key = id(module)
        is_reload = self._reload_target is module
        if is_reload:
            module.__initialized__ = False
            module.__initializing__ = False
        state = dict(module.__dict__)
        if key not in pristine:
            pristine[key] = dict(state)
        try:
            globals()[init](module)
            module._cribo_machinery_loaded = True
        except BaseException:
            if is_reload:
                module.__initializing__ = False
            else:
                module.__dict__.clear()
                module.__dict__.update(state)
                module.__initializing__ = False
            raise
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}
        self._namespaces = {}
        self._loader = _CriboPreservedLoader

    def register(self, name, init, namespace, is_package, exports=None):
        self._targets[name] = init, namespace, is_package, exports or {}

    def bind(self, name, namespace):
        self._namespaces[name] = namespace

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, self._loader(entry, self._namespaces.get(name), target), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder_local = _CriboPreservedFinder()
_cribo_finder_local._namespaces = _cribo_finder._namespaces
for _cribo_index, _cribo_meta_finder in enumerate(_sys.meta_path):
    if getattr(_cribo_meta_finder, '__name__', '') == 'PathFinder':
        _sys.meta_path.insert(_cribo_index, _cribo_finder_local)
        break
else:
    _sys.meta_path.insert(0, _cribo_finder_local)
_cribo_finder_local.register('module_b', '_cribo_init___cribo_276673_module_b', 'module_b', False)
_cribo_finder_local.register('module_a', '_cribo_init___cribo_12d4a8_module_a', 'module_a', False)
module_a = _cribo.types.SimpleNamespace(__name__='module_a', __initializing__=False, __initialized__=False)
_cribo_finder.bind('module_a', module_a)
def _cribo_init___cribo_12d4a8_module_a(_cribo_self):
    if getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = ''
    _cribo_self.__doc__ = 'First module with metaclass and class - will have original names.'
    """First module with metaclass and class - will have original names."""

    class YAMLObjectMetaclass(type):
        """The metaclass for YAMLObject."""

        def __init__(cls, name, bases, kwds):
            super(YAMLObjectMetaclass, cls).__init__(name, bases, kwds)
            if "yaml_tag" in kwds and kwds["yaml_tag"] is not None:
                cls._registered_a = True
    YAMLObjectMetaclass.__module__ = 'module_a'
    YAMLObjectMetaclass.__qualname__ = 'YAMLObjectMetaclass'
    _cribo_self.YAMLObjectMetaclass = YAMLObjectMetaclass

    class YAMLObject(metaclass=YAMLObjectMetaclass):
        """An object with metaclass from module_a."""
        yaml_tag = None

        def __init__(self):
            pass
    YAMLObject.__module__ = 'module_a'
    YAMLObject.__qualname__ = 'YAMLObject'
    _cribo_self.YAMLObject = YAMLObject
    _cribo_self.__initialized__ = True
    _cribo_self.__initializing__ = False
    return _cribo_self
module_a.__init__ = _cribo_init___cribo_12d4a8_module_a
module_b = _cribo.types.SimpleNamespace(__name__='module_b', __initializing__=False, __initialized__=False)
_cribo_finder.bind('module_b', module_b)
def _cribo_init___cribo_276673_module_b(_cribo_self):
    if getattr(_cribo_self, '__initialized__', False):
        return _cribo_self
    if getattr(_cribo_self, '__initializing__', False):
        return _cribo_self
    _cribo_self.__initializing__ = True
    _cribo_self.__package__ = ''
    _cribo_self.__doc__ = 'Second module with same-named metaclass and class - will get renamed.'
    """Second module with same-named metaclass and class - will get renamed."""

    class YAMLObjectMetaclass(type):
        """Another metaclass with the same name."""

        def __init__(cls, name, bases, kwds):
            super(YAMLObjectMetaclass, cls).__init__(name, bases, kwds)
            if "yaml_tag" in kwds and kwds["yaml_tag"] is not None:
                cls._registered_b = True
    YAMLObjectMetaclass.__module__ = 'module_b'
    YAMLObjectMetaclass.__qualname__ = 'YAMLObjectMetaclass'
    _cribo_self.YAMLObjectMetaclass = YAMLObjectMetaclass

    class YAMLObject(metaclass=YAMLObjectMetaclass):
        """Another class with the same name but different metaclass."""
        yaml_tag = None

        def __init__(self):
            pass
    YAMLObject.__module__ = 'module_b'
    YAMLObject.__qualname__ = 'YAMLObject'
    _cribo_self.YAMLObject = YAMLObject
    _cribo_self.__initialized__ = True
    _cribo_self.__initializing__ = False
    return _cribo_self
module_b.__init__ = _cribo_init___cribo_276673_module_b
"""Test that demonstrates metaclass ordering issue with name collisions."""
module_a = _cribo_init___cribo_12d4a8_module_a(module_a)
YAMLObject = module_a.YAMLObject
module_b = _cribo_init___cribo_276673_module_b(module_b)
YAMLObjectB = module_b.YAMLObject
def test_both_classes():
    """Test that both metaclass-based classes work."""

    class MyObjectA(YAMLObject):
        yaml_tag = "!myobject_a"

        def __init__(self, value):
            self.value = value
    obj_a = MyObjectA(42)
    assert obj_a.value == 42
    assert MyObjectA.yaml_tag == "!myobject_a"

    class MyObjectB(YAMLObjectB):
        yaml_tag = "!myobject_b"

        def __init__(self, value):
            self.value = value * 2
    obj_b = MyObjectB(21)
    assert obj_b.value == 42
    assert MyObjectB.yaml_tag == "!myobject_b"
    print("Both metaclass tests passed")
if __name__ == "__main__":
    test_both_classes()
