crates/cribo/tests/snapshots/bundled_code@metaclass_renamed_forward_ref.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/metaclass_renamed_forward_ref/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
class _CriboPreservedLoader:

    def __init__(self, entry):
        self._entry = entry

    def create_module(self, spec):
        return globals()[self._entry[1]]

    def exec_module(self, module):
        init = self._entry[0]
        if init is not None:
            globals()[init](module)
class _CriboPreservedFinder:

    def __init__(self):
        self._targets = {}

    def register(self, name, init, namespace, is_package):
        self._targets[name] = init, namespace, is_package

    def find_spec(self, name, path=None, target=None):
        entry = self._targets.get(name)
        if entry is None:
            return None
        from importlib.machinery import ModuleSpec
        return ModuleSpec(name, _CriboPreservedLoader(entry), is_package=entry[2])
_cribo_finder = _CriboPreservedFinder()
_sys.meta_path.append(_cribo_finder)
_cribo_finder.register('other', '_cribo_init___cribo_c0fc3d_other', 'other', False)
_cribo_finder.register('base', '_cribo_init___cribo_a6386c_base', 'base', False)
base = _cribo.types.SimpleNamespace(__name__='base', __initializing__=False, __initialized__=False)
def _cribo_init___cribo_a6386c_base(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    """Base module with metaclass definitions."""

    class MyMetaclass(type):
        """A metaclass that adds attributes."""

        def __init__(cls, name, bases, kwds):
            super(MyMetaclass, cls).__init__(name, bases, kwds)
            cls.base_attr = "from base"
    MyMetaclass.__module__ = 'base'
    MyMetaclass.__qualname__ = 'MyMetaclass'
    self.MyMetaclass = MyMetaclass

    class MyObject(metaclass=MyMetaclass):
        """A class using the metaclass."""

        def __repr__(self):
            return f"MyObject(base_attr={self.base_attr})"
    MyObject.__module__ = 'base'
    MyObject.__qualname__ = 'MyObject'
    self.MyObject = MyObject
    self.__initialized__ = True
    self.__initializing__ = False
    return self
base.__init__ = _cribo_init___cribo_a6386c_base
other = _cribo.types.SimpleNamespace(__name__='other', __initializing__=False, __initialized__=False)
def _cribo_init___cribo_c0fc3d_other(self):
    if getattr(self, '__initialized__', False):
        return self
    if getattr(self, '__initializing__', False):
        return self
    self.__initializing__ = True
    """Another module with similar class names to trigger renaming."""

    class MyMetaclass(type):
        """Another metaclass with the same name."""

        def __init__(cls, name, bases, kwds):
            super(MyMetaclass, cls).__init__(name, bases, kwds)
            cls.other_attr = "from other"
    MyMetaclass.__module__ = 'other'
    MyMetaclass.__qualname__ = 'MyMetaclass'
    self.MyMetaclass = MyMetaclass

    class MyObject(metaclass=MyMetaclass):
        """Another class with the same name."""

        def __repr__(self):
            return f"OtherMyObject(other_attr={self.other_attr})"
    MyObject.__module__ = 'other'
    MyObject.__qualname__ = 'MyObject'
    self.MyObject = MyObject
    self.__initialized__ = True
    self.__initializing__ = False
    return self
other.__init__ = _cribo_init___cribo_c0fc3d_other
"""\nTest fixture for metaclass forward reference with renaming issue.\n\nThis reproduces the bug where class renaming causes forward references\nto metaclasses, similar to what happens with PyYAML.\n"""
base = _cribo_init___cribo_a6386c_base(base)
MyMetaclass = base.MyMetaclass
MyObject = base.MyObject
other = _cribo_init___cribo_c0fc3d_other(other)
OtherMeta = other.MyMetaclass
OtherObject = other.MyObject
obj1 = MyObject()
print(f"Object 1 created: {obj1}")
obj2 = OtherObject()
print(f"Object 2 created: {obj2}")
print("Test passed!")
